--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ LABEL maintainer="Manuel Rueda <manuel.rueda@cnag.eu>"
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get -y install apt-utils wget bzip2 git cpanminus perl-doc gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev libcurl4-openssl-dev pkg-config libssl-dev aria2 unzip jq vim sudo default-jre python3-pip && \
-    pip install xlsx2csv
+    pip install xlsx2csv flask pandas
 
 # Download app
 RUN mkdir /usr/share/beacon-ri
