--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,32 +1,38 @@
+# Use Ubuntu 20.04 as the base image
 FROM ubuntu:20.04
 
-# File Maintainer
+# Maintainer Information
 LABEL maintainer="Manuel Rueda <manuel.rueda@cnag.eu>"
 
-# Build env 
+# Set non-interactive environment for apt operations
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && \
-    apt-get -y install apt-utils wget bzip2 git cpanminus perl-doc gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev libcurl4-openssl-dev pkg-config libssl-dev aria2 unzip jq vim sudo default-jre python3-pip && \
-    pip install xlsx2csv flask pandas
 
-# Download app
-RUN mkdir /usr/share/beacon-ri
+# Install necessary packages and Python modules
+RUN apt-get update && apt-get install -y \
+    apt-utils wget bzip2 git cpanminus perl-doc gcc make \
+    libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev \
+    liblzma-dev libcurl4-openssl-dev pkg-config libssl-dev \
+    aria2 unzip jq vim sudo default-jre python3-pip && \
+    pip install xlsx2csv flask pandas && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Create application directory and clone the repository
+RUN mkdir -p /usr/share/beacon-ri
 WORKDIR /usr/share/beacon-ri/
 RUN git clone https://github.com/mrueda/beacon2-ri-tools.git
 
-# Install Perl modules
+# Install Perl dependencies
 WORKDIR /usr/share/beacon-ri/beacon2-ri-tools
 RUN cpanm --notest --installdeps .
 
-# Add user "dockeruser"
+# Add a non-root user
 ARG UID=1000
 ARG GID=1000
+RUN groupadd -g "${GID}" dockeruser && \
+    useradd --create-home --no-log-init -u "${UID}" -g "${GID}" dockeruser
 
-RUN groupadd -g "${GID}" dockeruser \
-  && useradd --create-home --no-log-init -u "${UID}" -g "${GID}" dockeruser
+# Uncomment the following line to run the container as dockeruser
+# USER dockeruser
 
-# To change default user from root -> dockeruser
-#USER dockeruser
-
-# Get back to entry dir
+# Set the working directory back to the application directory
 WORKDIR /usr/share/beacon-ri/
