--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,6 +2,10 @@ name: Docker build
 
 on:
   workflow_dispatch
+#  push:
+#    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
 
 jobs:
   build:
@@ -13,27 +17,23 @@ jobs:
         id: get_version
         run: echo "::set-output name=VERSION::$(cat VERSION)"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: arm64,amd64
+      - name: Set up Git user
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Build Docker image
+        run: |
+          docker build -t manuelrueda/beacon2-ri-tools:${{ steps.get_version.outputs.VERSION }} -f docker/Dockerfile .
+          docker tag manuelrueda/beacon2-ri-tools:${{ steps.get_version.outputs.VERSION }} manuelrueda/beacon2-ri-tools:latest
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push multi-arch image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            manuelrueda/convert-pheno:${{ steps.get_version.outputs.VERSION }}
-            manuelrueda/convert-pheno:latest
-          platforms: linux/amd64,linux/arm64
+      - name: Push to Docker Hub
+        run: |
+          docker image push manuelrueda/beacon2-ri-tools:${{ steps.get_version.outputs.VERSION }}
+          docker image push manuelrueda/beacon2-ri-tools:latest
