Add examples with hg38

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 bck/
 old/
 /bin/mrueda_ws1_config.yaml
+/examples/ALL.chr22.shapeit2_integrated_snvindels_v2a_27022019.GRCh38.phased.vcf.gz
+/examples/ALL.chr22.shapeit2_integrated_snvindels_v2a_27022019.GRCh38.phased.vcf.gz.tbi
 /do_readme.sh
