--- a/bin/config.yaml
+++ b/bin/config.yaml
@@ -1,5 +1,5 @@
 ---
-base: /usr/share/beacon-ri
+base: /media/mrueda/2TBS/external/beacon2-cbi-tools-data
 
 # Reference assemblies (genomes)
 hs37fasta: "{base}/databases/genomes/hs37d5.fa.gz"
@@ -7,8 +7,8 @@ hg19fasta: "{base}/databases/genomes/ucsc.hg19.fasta.gz"
 hg38fasta: "{base}/databases/genomes/hg38.fa.gz"
 
 # ClinVar
-hg19clinvar: "{base}/databases/snpeff/v5.0/hg19/clinvar_20211218.vcf.gz"
-hg38clinvar: "{base}/databases/snpeff/v5.0/hg38/clinvar_20211218.vcf.gz"
+hg19clinvar: "{base}/databases/snpeff/v5.0/hg19/clinvar_20250312.vcf.gz"
+hg38clinvar: "{base}/databases/snpeff/v5.0/hg38/clinvar_20250312.vcf.gz"
 
 # Cosmic 
 hg19cosmic: "{base}/databases/snpeff/v5.0/hg19/CosmicCodingMuts.normal.hg19.vcf.gz"
@@ -19,19 +19,19 @@ hg19dbnsfp: "{base}/databases/snpeff/v5.0/hg19/dbNSFP4.1a_hg19.txt.gz"
 hg38dbnsfp: "{base}/databases/snpeff/v5.0/hg38/dbNSFP4.1a_hg38.txt.gz"
 
 # Miscellanea software
-snpeff: "{base}/pro/snpEff/snpEff.jar"
-snpsift: "{base}/pro/snpEff/SnpSift.jar"
-bcftools: "{base}/pro/NGSutils/bcftools-1.21-103_{arch}/bcftools"
+snpeff: "{base}/soft/snpEff/snpEff.jar"
+snpsift: "{base}/soft/snpEff/SnpSift.jar"
+bcftools: "{base}/soft/NGSutils/bcftools-1.21-103_{arch}/bcftools"
 
 # Max RAM memory for snpeff (optional)
 mem: 8G
 
 # Temporary directory (optional)
-tmpdir: /tmp
+tmpdir: "{base}/tmp"
 
 # MongoDB 
-mongoimport: "{base}/pro/mongodb-database-tools-ubuntu2404-{arch}-100.11.0/bin/mongoimport"
-mongostat: "{base}/pro/mongodb-database-tools-ubuntu2404-{arch}-100.11.0/bin/mongostat"
+mongoimport: "{base}/soft/mongodb-database-tools-ubuntu2404-{arch}-100.11.0/bin/mongoimport"
+mongostat: "{base}/soft/mongodb-database-tools-ubuntu2404-{arch}-100.11.0/bin/mongostat"
 mongodburi: "mongodb://root:example@mongo:27017/beacon?authSource=admin"
 mongosh: "/usr/bin/mongosh"
 
