--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,23 +12,19 @@ RUN apt-get update && apt-get install -y \
     apt-utils wget bzip2 git cpanminus perl-doc gcc make \
     libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev \
     liblzma-dev libcurl4-openssl-dev pkg-config libssl-dev mongodb-clients\
-    aria2 unzip jq vim sudo default-jre python3-pip && \
+    unzip jq vim sudo default-jre python3-pip && \
     pip install xlsx2csv flask pandas && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
-WORKDIR /usr/share/beacon-ri
+WORKDIR /usr/share/
 
 # Clone the repository (shallow clone for efficiency)
 RUN git clone --depth=1 https://github.com/mrueda/beacon2-ri-tools.git
 
 # Install Perl dependencies
-WORKDIR /usr/share/beacon-ri/beacon2-ri-tools
+WORKDIR /usr/share/beacon2-ri-tools
 RUN cpanm --notest --installdeps . && rm -rf /root/.cpanm/work/*
-
-# Install Perl dependencies
-WORKDIR /usr/share/beacon-ri/beacon2-ri-tools
-RUN cpanm --notest --installdeps .
 
 # Add a non-root user
 ARG UID=1000
@@ -38,6 +34,3 @@ RUN groupadd -g "${GID}" dockeruser && \
 
 # Uncomment the following line to run the container as dockeruser
 # USER dockeruser
-
-# Set the working directory back to the application directory
-WORKDIR /usr/share/beacon-ri/
